yoshimi 1.3.x

2016-5-28 Will
- Vector control 'Clear' implemented.
- Improved Vector GUI structure.
- Identified vector controls.
- Updated docs.

2016-5-27 Will
- Mixer sliders now right click to home position.
- All vector options implemented except 'Clear'.

2016-5-26 Will
- Initial implementation of GUI vector control.

2016-5-25 Will
- Refinements to system and insertion effect selectors
- Updated docs
- Added auto build update.

2016-5-24 Will
- System sends now identified :)

2016-5-23 Will
- Added aftertouch recognition to LV2 (not actually used yet)
- Identified part to system effect sends.
- Identified insert and system effect controls (not system sends)
- More adjustment to control ID numbers.
- Yoshimi now has a build number :)

2016-5-22 Will
- Bugfix: Kit level IDs were wrong.
- Updated docs.

2016-5-21 Will
- Effects controls now mostly identified.
- Yoshimi now only sets a single client if jack is both midi & audio

2016-5-20 Will
- Rearanged some control values.
- Corrected amp/freq lfo anomaly.
- Changed engine numbers.
- Updated docs.
- Started Identifying effects controls.
- Reviewed files to remove GCC6 warnings.

2016-5-19 Will
- Completed moving controls ID text from GUI to main code.
- Corrected dev-notes/Yoshimi Controller Numbers.ods
- Completed Envelope control IDs.

2016-5-18 Will
- Started moving controls ID text from GUI to main code.
- New sound Pad Organ :)

2016-5-17 Will
- Identified controls in Part Controllers.
- Updated dev-notes/Yoshimi Controller Numbers.ods

2016-5-16 Will
- Updated some tooltips
- Documentation now covers all implemeted controls.
- Identified top level controls.
- Adjusted some control numbers for conformity.

2016-5-15 Will
- Changed Resonance interpolation control to clarify two types
  and reorganised layout of neighboring controls for uniformity.
- Bugfix: Filter control had wrong ID
- Bugfix: LFO had wrong insert parameters.
- Bugfix: Got interpolation button names the wrong way round :(