@@ -31,3 +31,7 @@ If using Fluid to edit GUI files, please close all windows and collapse all menu
 
 
 Please try to avoid creating trailing whitespace.
+
+
+
+We now implement a build number. This is only bumped up when I push new commits to master (both github and sourceforge) so may represent several actual commits.
