@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-5-29 Will
+- Implemented Zyn. compatible AddSynth modulator fixed frequency.
+- Updated some docs.
+
 2016-5-28 Will
 - Vector control 'Clear' implemented.
 - Improved Vector GUI structure.
